# corky-cli

./: Cargo.toml  README.md
cmds/: install.sh  uninstall.sh
src/: init.rs  main.rs
